--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 
   <div class="cover">
     <!-- task 1: update the header for your quiz -->
-    <h1> Which [ ] Character Are You? </h1>
+    <h1> Which Scooby Doo Character Are You? </h1>
 
     <!-- task 2: update the cover photo for your quiz -->
-    <img class="coverPhoto" src="https://media.sproutsocial.com/uploads/2018/04/Facebook-Cover-Photo-Size.png">
+    <img class="coverPhoto" src="https://images.app.goo.gl/YpF5eupadmHview7A">
   </div>
 
   <!-- task 3: Update the questions for your quiz. Be sure to have AT LEAST three to ask the user. Add more questions if you want!-->
    <div class="questions">
-    <h3> 1. [Question 1] </h3>
+    <h3> 1. Do you like dogs? </h3>
     <input class="q1">
     </br>
-    <h3> 2. [Question 2] </h3>
+    <h3> 2. Do you Wear Glasses? </h3>
     <input class="q2">
     </br>
-    <h3> 3. [Question 3] </h3>
+    <h3> 3. Can You drive? </h3>
     <input class="q3">
   </div>
   </br>
